--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 body{
     margin: 0;
     padding: 0;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-x: hidden;
   }
+::-webkit-scrollbar { 
+  display: none;
+}
