--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html{
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 html::-webkit-scrollbar { 
   display: none;
